--- a/wp-content/themes/contentify/package.json
+++ b/wp-content/themes/contentify/package.json
@@ -37,6 +37,8 @@
     },
     "dependencies": {
         "gsap": "^3.12.2",
+        "masonry": "^0.0.2",
+        "masonry-layout": "^4.2.2",
         "swiper": "^10.3.1"
     }
 }
